[gd_scene load_steps=20 format=2]

[ext_resource path="res://EffectLibrary/ParticleEffects/Stink.tscn" type="PackedScene" id=1]
[ext_resource path="res://EffectLibrary/ParticleEffects/Contamination.tscn" type="PackedScene" id=2]
[ext_resource path="res://EffectLibrary/ParticleEffects/EffectLibrary.tscn" type="PackedScene" id=3]
[ext_resource path="res://EffectLibrary/ParticleEffects/Ice.tscn" type="PackedScene" id=4]
[ext_resource path="res://Utility/TraitChecker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Character/DeathHandler.tscn" type="PackedScene" id=6]
[ext_resource path="res://Character/Stats/CharacterStats.tscn" type="PackedScene" id=7]
[ext_resource path="res://Character/DesireHandler.gd" type="Script" id=8]
[ext_resource path="res://Utility/DroppableZone.tscn" type="PackedScene" id=9]
[ext_resource path="res://Utility/DraggableItem.tscn" type="PackedScene" id=10]
[ext_resource path="res://EffectLibrary/ParticleEffects/Fire.tscn" type="PackedScene" id=11]
[ext_resource path="res://Character/Character.gd" type="Script" id=12]
[ext_resource path="res://Character/Sprites/AstronautA.png" type="Texture" id=13]
[ext_resource path="res://Character/Stats/Relationship/RelationshipModule.gd" type="Script" id=14]
[ext_resource path="res://Character/DreamSpawner.tscn" type="PackedScene" id=15]
[ext_resource path="res://Character/ConversationHandler.tscn" type="PackedScene" id=16]
[ext_resource path="res://Character/InsanityHandler.tscn" type="PackedScene" id=17]
[ext_resource path="res://Character/Stats/Relationship/RelationshipModule.tscn" type="PackedScene" id=18]

[sub_resource type="CapsuleShape2D" id=1]
radius = 86.2526
height = 184.282

[node name="Character" type="Area2D"]
scale = Vector2( 0.72, 0.68 )
script = ExtResource( 12 )
__meta__ = {
"_edit_horizontal_guides_": [ -94.1474 ]
}

[node name="Naut" type="Sprite" parent="."]
position = Vector2( 4.26169, -12.1247 )
scale = Vector2( 0.347362, 0.347362 )
texture = ExtResource( 13 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_right = 67.0
margin_bottom = 20.0
text = "SetOnFire"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Button" parent="."]
margin_left = 0.459656
margin_top = 49.3162
margin_right = 52.4597
margin_bottom = 69.3162
text = "Attack"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FasterHealthDrain" type="Button" parent="."]
margin_left = 1.0
margin_top = 25.0
margin_right = 66.0
margin_bottom = 45.0
text = "Remove Fire"

[node name="Tween" type="Tween" parent="."]

[node name="RelationshipModule" type="Node2D" parent="."]
script = ExtResource( 14 )

[node name="TraitChecker" parent="." instance=ExtResource( 5 )]

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( -194.444, -352.941 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( -194.444, -352.941 )

[node name="CharacterStats" parent="." instance=ExtResource( 7 )]
margin_left = -216.111
margin_top = -411.765
margin_right = -216.111
margin_bottom = -411.765
rect_scale = Vector2( 0.5, 0.5 )

[node name="DeathHandler" parent="." instance=ExtResource( 6 )]

[node name="DraggableItem" parent="." instance=ExtResource( 10 )]

[node name="DroppableZone" parent="." instance=ExtResource( 9 )]
acceptedDrops = [ "Dispenser" ]

[node name="EffectLibrary" parent="." instance=ExtResource( 3 )]
effectLibary = {
"contamination": ExtResource( 2 ),
"fire": ExtResource( 11 ),
"ice": ExtResource( 4 ),
"stink": ExtResource( 1 )
}

[node name="DreamSpawner" parent="." instance=ExtResource( 15 )]
position = Vector2( -10.3495, -174.303 )

[node name="RelationshipModule2" parent="." instance=ExtResource( 18 )]
position = Vector2( -164.34, -359.121 )

[node name="ConversationHandler" parent="." instance=ExtResource( 16 )]
position = Vector2( -12.8675, -282.271 )

[node name="InsanityHandler" parent="." instance=ExtResource( 17 )]

[node name="PersonalCamera" type="Camera2D" parent="."]
position = Vector2( -7.36126, -261.108 )
zoom = Vector2( 0.5, 0.5 )

[node name="DesireHandler" type="Node2D" parent="."]
script = ExtResource( 8 )
[connection signal="area_entered" from="." to="." method="_on_Character_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Character_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_Character_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Character_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Attack" to="." method="_on_Attack_pressed"]
[connection signal="pressed" from="FasterHealthDrain" to="." method="_on_FasterHealthDrain_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
